Fix multi touch bug on iOS devices

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -5,6 +5,7 @@ body {
   color: white;
   font-family: "Raleway";
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0.3);
+  overflow: hidden;
 }
 
 .control {
